--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
   <div class="container">
     <a href="{%url 'home'%}" class="header__logo">
       <img src="{% static 'images/logo.svg'  %}" />
-      <h1>StudyBuddy</h1>
+      <h1>StudyIt</h1>
     </a>
     <form class="header__search" method = "GET" action = "{% url 'home'%}">
       <label>
@@ -23,11 +23,11 @@
       <!-- Logged In -->
       {%  if request.user.is_authenticated  %}
       <div class="header__user">
-        <a href="profile.html">
+        <a href="{%url 'update-user'%}">
           <div class="avatar avatar--medium active">
             <img src="https://randomuser.me/api/portraits/men/37.jpg" />
           </div>
-          <p>{{request.user.name}}<span>@{{request.user.name}}</span></p>
+          <p>{{request.user.username}}<span>@{{request.user.username}}</span></p>
         </a>
         <button class="dropdown-button">
           <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
